# open-mp-monte-carlo

./: CMakeLists.txt  README.md  hit.cpp  main.cpp
.github/workflows/: ci.yaml
src/: tests_data.xlsx
template_dont_edit/: REPORT.md
test_data/: ref
